# wechat

./: .gitignore  Cargo.toml  README.md  config.example.yaml
docs/: lowcode-module-definition.template.json  lowcode-registration.md  module-property-definition.json
src/: channel_binding_client.rs  channel_session_client.rs  config.rs  error.rs  logging.rs  main.rs  models.rs  poller.rs  project_file_client.rs  state.rs  storage.rs  wechat_api.rs
src/routes/: api.rs  compat.rs  external_module.rs  management.rs  mod.rs
