[package]
name = "wechat"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
aes = "0.8"
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dashmap = "5.5"
ecb = "0.1"
hex = "0.4"
image = "0.25"
md5 = "0.7"
qrcode = "0.14"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
urlencoding = "2.1"
uuid = { version = "1.17", features = ["v4"] }
